Added ssl certificate, random pictures for users without avatars, delete game when all players leave, if player already playing redirect from registration to game, delete mainUser attribute and show button start to all